CSS/navbar/navbar-responsive-styles.css
.active {
    transform: translateX(-100%);
    transition: all 0.5s ease;
    opacity: 0.9;
}

@media all and (max-width: 1200px) {
    .navbar {
        position: fixed;
    }
    .navbar-hamburger__container {
        display: block;
        position: absolute;
        top: 50%;
        right: 20px;
        transform: translate(0, -50%);
        z-index: 100;
    }
    .navbar__list {
        background-color: var(--primary-color);
        position: absolute;
        top: 0vh;
        right: 0;
        height: 100vh;
        width: 400px;
        z-index: 20;
        padding: 10px 0;
        transform: translateX(100%);
        transition: all 0.5s ease;
        display: block;
    }
    .navbar__list.active {
        transform: translateX(0%);
    }
    .navbar__item {
        padding: 1rem 2rem;
        margin: 6rem 1rem;
        text-align: center;
        color: #fff;
    }
    .navbar__link {
        color: #fff;
        font-size: 24px;
    }
    .btn-work {
        background-color: var(--secondary-color);
    }
}

@media all and (max-width: 768px) {
    .button {
        display: none;
    }

    .nav-list {
        width: 100%;
        justify-content: space-around;
    }
}

